--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     ],
     "rules": {
         "indent": [
-            2,
+            "error",
             2
         ],
         "linebreak-style": [
